--- a/BlueThalyzer/platforms/android/res/xml/config.xml
+++ b/BlueThalyzer/platforms/android/res/xml/config.xml
@@ -21,4 +21,8 @@
     <allow-intent href="geo:*" />
     <allow-intent href="market:*" />
     <preference name="loglevel" value="DEBUG" />
+    <feature name="Uber">
+        <param name="android-package" value="ca.kloppmagic.plugin.uber.Uber" />
+        <param name="onload" value="true" />
+    </feature>
 </widget>
